# Krayon

./: .gitignore  CMakeLists.txt  README.md
src/core/: commands.hpp  scene.hpp  types.hpp
src/mini/: mini_lang.hpp
